--- a/tesis.html
+++ b/tesis.html
@@ -64,7 +64,7 @@
         <div class="span12">
           <div class="page-header">
             <h1>Tesis</h1>
-            <h4>En esta página se encuentran las tesis realizadas en colaboración con el laboratorio.</h4>            
+            <h1><small>Tesis realizadas en colaboración con el laboratorio</small></h1>            
           </div><!--hero-unit-->
         </div><!--/span12-->
  			</div><!--row1-->
