--- a/reglamento.html
+++ b/reglamento.html
@@ -61,12 +61,11 @@
     
     <div class="container">      
         
-        <div class="jumbotron">
-            <h1>Reglamento</h1>
-	    </br>
-	     <embed src="Reglamento2011-2Publicacion.pdf" width=100% height=900px>
-          </div><!--/jumbotron -->
-	 
+        <div class="page-header">
+        <h1>Reglamento</h1>
+        <h1><small>Lineamientos internos del laboratorio</small></h1>				
+      </div>
+	     <embed src="Reglamento2011-2Publicacion.pdf" width=100% height=900px>	 
       <hr>
       <footer>
         <p class="pull-right"><a href="#">Regresar</a></p>
