--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
     </div><!-- /.navbar-wrapper -->
     
     <div class="jumbotron masthead">
-		<div class="container" >
+		<div class="container-fluid" >
 			<div class="row-fluid">
-				<div class="span10">
+				<div class="span2 hidden-phone"><img src="./img/fi.png"></div>
+				<div class="span8">
 					<h1>Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-				</div>
-				<div class="span1 hidden-phone"><img src="./img/fi.png"></div>
-				<div class="span1 hidden-phone"><img src="./img/unam.png"></div>
-			</div>
-			<hr>
-			<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
-			<hr>
+					<hr>
+					<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
+					<hr>
+				</div>				
+				<div class="span2 hidden-phone"><img src="./img/unam.png"></div>
+			</div>			
 		</div>		
     </div>      
 
@@ -122,7 +122,7 @@
 			</div>
 			<div class="row">
 				<div class="span3 offset8">
-					<a href="servicio.html"><button class="btn btn-large btn-danger pull-right" type="button">Más información</button></a>
+					<a href="integrantes.html#servicio"><button class="btn btn-large btn-inverse pull-right" type="button">Más información</button></a>
 				</div>
 			</div>
 		</div>		
