--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
     <div class="jumbotron masthead">
 		<div class="container-fluid" >
 			<div class="row-fluid">
-				<div class="span2 hidden-phone"><img src="./img/fi.png"></div>
+				<div class="span2 hidden-phone"><img src="./img/unam.png"></div>
 				<div class="span8">
 					<h1>Laboratorio Intel y Cómputo de Alto Desempeño</h1>
 					<hr>
 					<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
 					<hr>
-				</div>				
-				<div class="span2 hidden-phone"><img src="./img/unam.png"></div>
+				</div>
+				<div class="span2 hidden-phone"><img src="./img/fi.png"></div>
+				
 			</div>			
 		</div>		
     </div>      
@@ -81,7 +82,7 @@
 		
 		<div class="featurette">
 			<h2 class="featurette-heading">Objetivo del laboratorio</h2>
-			<p class="lead">El laboratorio de Telemática en el área de cómputo de alto desempeño se dedica a la formación de alumnos que están interesados en soluciones paralelas y distribuidas para el desarrollo de aplicaciones. Así mismo presta servicio al personal académico en apoyo a actividades docentes y de investigación en proyectos relacionados con el cómputo de alto desempeño.</p>
+			<p class="lead">El laboratorio se dedica a la formación de alumnos que están interesados en soluciones paralelas y distribuidas para el desarrollo de aplicaciones. Así mismo presta servicio al personal académico en apoyo a actividades docentes y de investigación en proyectos relacionados con el cómputo de alto desempeño.</p>
 		</div>
 		
 		<div class="featurette">        
