--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 	<div class="jumbotron masthead">
 		<div class="container-fluid" >
 			<div class="row-fluid">
-				<div class="span2 hidden-phone"><img src="./img/unam.png"></div>
+				<div class="span2 hidden-phone"><a href=http://www.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
 				<div class="span8">
 					<h1>Laboratorio Intel y Cómputo de Alto Desempeño</h1>
 					<hr>
 					<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
 					<hr>
 				</div>
-				<div class="span2 hidden-phone"><img src="./img/fi.png"></div>
+				<div class="span2 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
 
 			</div>
 		</div>
