change objective title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
-								<li class="active"><a href="#"><i class="icon-home icon-white"></i> Página de incio</a></li>
+								<li class="active"><a href="#"><i class="icon-home"></i> Página de incio</a></li>
 								<li class="divider-vertical"></li>
 								<li><a href="integrantes.html"><i class="icon-user icon-white"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
@@ -81,7 +81,7 @@
 	<div class="container marketing">
 
 		<div class="featurette">
-			<h2 class="featurette-heading">Objetivo del laboratorio</h2>
+			<h2 class="featurette-heading">Objetivo</h2>
 			<p class="lead">El laboratorio se dedica a la formación de alumnos que están interesados en soluciones paralelas y distribuidas para el desarrollo de aplicaciones. Así mismo presta servicio al personal académico en apoyo a actividades docentes y de investigación en proyectos relacionados con el cómputo de alto desempeño.</p>
 		</div>
 
