Change font, update infraestructira.html

--- a/infraestructura.html
+++ b/infraestructura.html
@@ -19,7 +19,7 @@
     <!-- NAVBAR -->
     <div class="navbar-wrapper">
 			<div class="navbar navbar-inverse">
-				<div class="navbar-inner navbar-static-top">
+				<div class="navbar-inner navbar-fixed-top">
 					<!-- Responsive Navbar-->
 					<div class="container">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,7 +31,7 @@
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
-								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de incio</a></li>
+								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
 								<li><a href="integrantes.html"><i class="icon-user icon-white"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
@@ -73,25 +73,37 @@
 
      	<div class="row"> <!--row1-->
 				<div class="span8">
-					<h3>3 estaciones de trabajo</h3>
-					<img src="http://placehold.it/700x300" class="img-polaroid">
-					<p>Características</p>
-					<ol>
-						<li>Característica 1</li>
-						<li>Característica 2</li>
-						<li>Característica 3</li>
-					</ol>
+					<h3 style="text-align: center">3 estaciones de trabajo Dell Precision T7500</h3>
+					<center><img id="WS" src="img/ws.jpg"/></center>
+					<p style="font-size: 20px; font-weight: bold">Características</p>
+					<ul>
+						<li>Procesador Intel Xeon E5620</li>
+						<li>Sistemas operativos:</li>
+						<ul>
+							<li>Fedora 16 (64-bit)</li>
+							<li>Windows 7 Professional Edition (64-bit)</li>
+						</ul>
+						<li>12 GB RAM</li>
+						<li>2 GPUs NVIDIA Quadro NVS 295</li>						
+					</ul>
+				<hr class="visible-phone">
 				</div><!--/span8-->
 
 				<div class="span4">
-					<h3>20 computadoras</h3>
-					<p><img src="http://placehold.it/350x300" class="img-polaroid"/></p>
-					<p>Características</p>
-					<ol>
-						<li>Característica 1</li>
-						<li>Característica 2</li>
-						<li>Característica 3</li>
-					</ol>
+					<h3 style="text-align: center">20 computadoras Dell Optiplex GX620</h3>
+					<img src="img/optiplex.jpg"/>
+					<br><br>
+					<p style="font-size: 20px; font-weight: bold">Características</p>
+					<ul>
+						<li>Procesador Intel Pentium D 326</li>
+						<li>Sistemas operativos:</li>
+						<ul>
+							<li>Fedora 18 (64-bit)</li>
+							<li>Windows 7 Professional Edition (32-bit)</li>
+						</ul>
+						<li>4 GB RAM</li>
+						<li>Integrated Intel Graphics Media Accelator 950 Dynamic Video Memory Technology 3.0 </li>
+					</ul>
 				</div><!--/span4-->
 			</div><!--/row1-->
 
