--- a/integrantes.html
+++ b/integrantes.html
@@ -20,7 +20,7 @@
     <!-- NAVBAR -->
     <div class="navbar-wrapper">
 			<div class="navbar navbar-inverse">
-				<div class="navbar-inner navbar-static-top">
+				<div class="navbar-inner navbar-fixed-top">
 					<!-- Responsive Navbar-->
 					<div class="container">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -32,7 +32,7 @@
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
-								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de incio</a></li>
+								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
 								<li class="active"><a href="#"><i class="icon-user icon-white"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
@@ -66,7 +66,7 @@
       </div>
       <div class="row"><!--row 1-->
         <div class="span3" id="navbar">
-					<ul class="nav nav-list affix well" data-spy="affix" data-offset-top="250">
+					<ul class="nav nav-list affix well" data-spy="affix" data-offset-top="220">
 						<li class="nav-header">Asesores</li>
 						<li class="active"><a href="#laura">Ing. Laura Sandoval Montaño</a></li>
 						<li><a href="#karen">M.I. Elba Karen Sáenz García</a></li>
@@ -82,7 +82,8 @@
         <hr class="visible-phone">
         <div class="span9">
 					<section id="laura">
-            <h1 id="laura">Ing. Laura Sandoval Montaño</h1>
+			<br><br>
+            <h1>Ing. Laura Sandoval Montaño</h1>
             <h1><small>Responsable del laboratorio</small></h1>
 						<div class="row-fluid"><!--row 2-->
 							<div class="span8">
@@ -102,11 +103,13 @@
 						<div class="visible-phone">
 							<p style="text-align: right"><a href="#">Regresar</a></p>
 						</div>
+						<br><br>
 						<hr>
 					</section>
 
 					<section id="karen">
-            <h1 >M.I. Elba Karen Sáenz García</h1>
+			<br><br>
+            <h1 id="karen2">M.I. Elba Karen Sáenz García</h1>
             <h1><small>Administradora del laboratorio</small></h1>
             <div class="row-fluid"><!--row 2-->
               <div class="span8">
@@ -126,10 +129,12 @@
             <div class="visible-phone">
 							<p style="text-align: right"><a href="#">Regresar</a></p>
             </div>
+			<br><br>
             <hr>
 					</section>
 
 					<section id="oscar">
+			<br><br>
             <h1>M.I. Oscar René Valdez Casillas</h1>
             <h1><small>Asesor</small></h1>
 						<div class="row-fluid"><!--row 2-->
@@ -150,10 +155,12 @@
 						<div class="visible-phone">
 							<p style="text-align: right"><a href="#">Regresar</a></p>
 						</div>
+						<br><br>
 						<hr>
 					</section>
 
 					<section id="andres">
+			<br><br>
             <h1>Ing. Andrés Mondragón Contreras</h1>
             <h1><small>Asesor</small></h1>
             <div class="row-fluid"><!--row 2-->
@@ -174,10 +181,12 @@
 						<div class="visible-phone">
 							<p style="text-align: right"><a href="#">Regresar</a></p>
 						</div>
+						<br><br>
             <hr>
 					</section>
 
 					<section id="tesistas">
+						<br><br>
 						<h1 >Tesistas</h1>
 						<h3>Título de la tesis</h3>
 						<dl>
@@ -209,7 +218,8 @@
 						</dl>
 						<div class="visible-phone">
 							<p style="text-align: right"><a href="#">Regresar</a></p>
-            </div>
+            </div>						
+						<br><br>
 						<hr>
 					</section>
 
