--- a/papime.html
+++ b/papime.html
@@ -19,7 +19,7 @@
 		<!-- NAVBAR -->
     <div class="navbar-wrapper">
 			<div class="navbar navbar-inverse">
-				<div class="navbar-inner navbar-static-top">
+				<div class="navbar-inner navbar-fixed-top">
 					<!-- Responsive Navbar-->
 					<div class="container">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,7 +31,7 @@
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
-								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de incio</a></li>
+								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
 								<li><a href="integrantes.html"><i class="icon-user icon-white"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
