--- a/integrantes.html
+++ b/integrantes.html
@@ -28,7 +28,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand visible-tablet" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+						<a class="brand visible-tablet" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
@@ -188,11 +188,11 @@
 					<section id="tesistas">
 						<br><br>
 						<h1 >Tesistas</h1>
-						<h3>Título de la tesis</h3>
+						<h3>Análisis e interpretación de patrones musicales</h3>
 						<dl>
 							<dt>Autor:</dt>
 							<dd>Néstor Abdy García Fragoso</dd>
-							<dt>Director:</dt>
+							<dt>Director de tesis:</dt>
 							<dd>Ing. Manuel Castañeda Castañeda</dd>
 						</dl>						
 						<div class="visible-phone">
