--- a/otros_proyectos.html
+++ b/otros_proyectos.html
@@ -29,7 +29,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand visible-tablet" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+						<a class="brand visible-tablet" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
