--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand visible-tablet" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+						<a class="brand visible-tablet" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
@@ -61,20 +61,63 @@
 
 
 	</div><!-- /.navbar-wrapper -->
-
-	<div class="jumbotron masthead">
-		<div class="container-fluid" >
-			<div class="row-fluid">
-				<div class="span2 hidden-phone"><a href=http://www.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
-				<div class="span8">
-					<h1>Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-					<hr>
-					<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
-					<hr>
+	
+	<div id="carousel" class="carousel slide">
+		<ol class="carousel-indicators pull-left">
+			<li data-target="#carousel" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel" data-slide-to="1"></li>
+			<li data-target="#carousel" data-slide-to="2"></li>
+		</ol>
+		
+		<div class="carousel-inner">
+			<div class="active item">
+				<div class="container-fluid">
+					<div class="row-fluid">
+						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
+						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
+						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+					</div>
 				</div>
-				<div class="span2 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
-
 			</div>
+			<div class="item">
+				<div class="container-fluid">
+					<div class="row-fluid">
+						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
+						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
+						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="container-fluid">
+					<div class="row-fluid">
+						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
+						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
+						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+					</div>
+				</div>			
+			</div>
+		</div>
+		
+		<a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
+		<a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
+	</div>
+
+	<!-- <div class="jumbotron masthead">
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
+				<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi.png"></a></div>
+				<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam.png"></a></div>
+			</div>
+		</div>
+	</div> -->
+	
+	<div class="container">
+		<div class="row">
+			<hr>
+			<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
+			<hr>
 		</div>
 	</div>
 
