--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand visible-tablet" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
+						<h4 class="visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
 							<ul class="nav">
 								<li class="active"><a href="#"><i class="icon-home"></i> Página de inicio</a></li>
@@ -62,8 +61,8 @@
 
 	</div><!-- /.navbar-wrapper -->
 	
-	<div id="carousel" class="carousel slide">
-		<ol class="carousel-indicators pull-left">
+	<div id="carousel" class="carousel slide visible-desktop">
+		<ol class="carousel-indicators">
 			<li data-target="#carousel" data-slide-to="0" class="active"></li>
 			<li data-target="#carousel" data-slide-to="1"></li>
 			<li data-target="#carousel" data-slide-to="2"></li>
@@ -74,26 +73,22 @@
 				<div class="container-fluid">
 					<div class="row-fluid">
 						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
-						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+						<a class="span1 visible-desktop" href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a>
+						<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div class="container-fluid">
-					<div class="row-fluid">
-						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
-						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+				<div class="container">
+					<div class="row">
+						<h1>Texto va aquí</h1>
 					</div>
 				</div>
 			</div>
 			<div class="item">
-				<div class="container-fluid">
-					<div class="row-fluid">
-						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-						<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a></div>
-						<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a></div>
+				<div class="container">
+					<div class="row">
+						<div class="hero-unit"></div>
 					</div>
 				</div>			
 			</div>
@@ -103,15 +98,17 @@
 		<a class="carousel-control right" href="#carousel" data-slide="next">&rsaquo;</a>
 	</div>
 
-	<!-- <div class="jumbotron masthead">
+	<div class="jumbotron masthead hidden-desktop">
 		<div class="container-fluid">
 			<div class="row-fluid">
-				<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-				<div class="span1 hidden-phone"><a href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/fi.png"></a></div>
-				<div class="offset10 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/unam.png"></a></div>
+				<div class="span2 hidden-phone"><a href=http://www.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
+				<h1 class="span8">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
+				<div class="span2 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
 			</div>
 		</div>
-	</div> -->
+	</div>
+	
+	<center><a href="http://telematica1.fi-b.unam.mx/cursos/" target="_blank" style="text-decoration: none"><button class="btn btn-large btn-inverse visible-desktop" type="button">Ir a la plataforma educativa Claroline</button></a></center>
 	
 	<div class="container">
 		<div class="row">
@@ -120,6 +117,9 @@
 			<hr>
 		</div>
 	</div>
+	
+	<center><a href="http://telematica1.fi-b.unam.mx/cursos/" target="_blank" style="text-decoration: none"><button class="btn btn-large btn-inverse visible-tablet" type="button">Ir a la plataforma educativa Claroline</button></a></center>
+	
 
 	<div class="container marketing">
 
