Change index and remove CSS unnecessary imports

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 					<div class="row-fluid">
 						<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
 						<a class="span1 visible-desktop" href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a>
-						<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a>
+						<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a>						
 					</div>
-				</div>
+				</div>				
 			</div>
 			<div class="item">
 				<div class="container">
@@ -88,7 +88,7 @@
 			<div class="item">
 				<div class="container">
 					<div class="row">
-						<div class="hero-unit"></div>
+						<h1>Texto también va a aquí</h1>
 					</div>
 				</div>			
 			</div>
@@ -113,7 +113,7 @@
 	<div class="container">
 		<div class="row">
 			<hr>
-			<h3>La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
+			<h3 id="descripcion">La necesidad de realizar de una manera más rápida los procesos de información masiva, solucionar problemas de tiempo real y cálculos complejos, así como satisfacer los requerimientos de software, han dado origen a un área de estudios conocida como procesamiento paralelo y distribuido.</h3>
 			<hr>
 		</div>
 	</div>
@@ -161,7 +161,7 @@
 			<h2 class="featurette-heading">Servicio social</h2>
 			<div class="row">
 				<div class="span12">
-					<p class="lead">El laboratorio cuenta con un programa de servicio social para alumnos que se encuentren cursando los últimos semestres de las carreras de Ingeniería en Computación, Ingeniería Eléctrica Electrónica o Ingeniería en Telecomunicaciones.</p>
+					<p class="lead" style="font-size: 20px">El laboratorio cuenta con un programa de servicio social para alumnos que se encuentren cursando los últimos semestres de las carreras de Ingeniería en Computación, Ingeniería Eléctrica Electrónica o Ingeniería en Telecomunicaciones.</p>
 				</div>
 			</div>
 			<div class="row">
