Change button size for phones and tablets

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 		</div>
 	</div>
 
-	<center><a href="http://telematica1.fi-b.unam.mx/cursos/" target="_blank" style="text-decoration: none"><button class="btn btn-large btn-inverse visible-tablet" type="button">Ir a la plataforma educativa Claroline</button></a></center>
+	<center><a href="http://telematica1.fi-b.unam.mx/cursos/" target="_blank" style="text-decoration: none"><button class="btn btn btn-inverse visible-tablet" type="button">Ir a la plataforma educativa Claroline</button></a></center>
+	<center><a href="http://telematica1.fi-b.unam.mx/cursos/" target="_blank" style="text-decoration: none"><button class="btn btn-inverse visible-phone" type="button">Ir a la plataforma educativa Claroline</button></a></center>
 
 
 	<div class="container marketing">
