--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 								<li><a href="tesis.html"><i class="icon-book icon-white"></i> Tesis</a></li>
 								<li class="divider-vertical"></li>
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase icon-white"></i> Proyectos<b class="caret"></b></a>
+									<a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase icon-white"></i> Proyectos<b class="caret"></b></a>
 									<ul class="dropdown-menu">
-										<li><a style="font-size: 13px" href="papime.html">Proyecto PAPIME</a></li>
+										<li><a href="papime.html" style="font-size: 13px">Proyecto PAPIME</a></li>
 										<li class="divider"></li>
-										<li><a style="font-size: 13px" href="otros_proyectos.html">Otros proyectos</a></li>
+										<li><a href="otros_proyectos.html" style="font-size: 13px">Otros proyectos</a></li>
 									</ul>
 								</li>
 								<li class="divider-vertical"></li>
