--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h4 class="visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
+						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
 							<ul class="nav">
 								<li class="active"><a href="#"><i class="icon-home"></i> Página de inicio</a></li>
@@ -98,9 +98,9 @@
 		<div class="jumbotron masthead hidden-desktop">
 			<div class="container-fluid">
 				<div class="row-fluid">
-					<div class="span2 hidden-phone"><a href=http://www.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
+					<div class="span2 visible-tablet"><a href=http://www.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
 					<h1 class="span8">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-					<div class="span2 hidden-phone"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
+					<div class="span2 visible-tablet"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
 				</div>
 			</div>
 		</div>
