--- a/infraestructura.html
+++ b/infraestructura.html
@@ -27,7 +27,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand visible-tablet" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<ul class="nav">
