Actualizar tesis.html

--- a/infraestructura.html
+++ b/infraestructura.html
@@ -82,8 +82,8 @@
 						<ul>
 							<li>Fedora 16 (64-bit)</li>
 							<li>Windows 7 Professional Edition (64-bit)</li>
-						</ul>
-						<li>12 GB RAM</li>
+						</ul>						
+						<li>12 GB RAM</li>						
 						<li>2 GPUs NVIDIA Quadro NVS 295</li>						
 					</ul>
 					<hr class="visible-phone">
@@ -106,6 +106,9 @@
 					</ul>
 				</div><!--/span4-->
 			</div><!--/row1-->
+			<div class="row">				
+					<h3 style="text-align: center">1 GPU NVIDIA K20C</h3>			
+			</div>
 
       <div class="row"> <!--row2-->
         <div class="span12">
