--- a/infraestructura.html
+++ b/infraestructura.html
@@ -107,7 +107,11 @@
 				</div><!--/span4-->
 			</div><!--/row1-->
 			<div class="row">				
-					<h3 style="text-align: center">1 GPU NVIDIA K20C</h3>			
+					<h3 style="text-align: center">1 GPU NVIDIA Tesla K20C</h3>
+					<br>					
+					<center><img src="img/k20.jpg"/></center>
+					<br>
+					<center><a href="http://www.nvidia.com/object/personal-supercomputing.html" target="_blank"><h4>Especificaciones</h4></a></center>
 			</div>
 
       <div class="row"> <!--row2-->
