Change header subtitle

--- a/otros_proyectos.html
+++ b/otros_proyectos.html
@@ -66,7 +66,7 @@
         <div class="span12">
           <div class="page-header">
             <h1>Otros proyectos</h1>
-						<h1><small>Inserte texto aquí</small></h1>
+						<h1><small>Trabajos de investigación y temas de tesis</small></h1>
           </div>
           <div class="row-fluid">
 						<h4>El laboratorio tiene los siguientes proyectos por realizar para las personas interesadas en elaborar una tesis de licenciatura</h4>
