--- a/reglamento.html
+++ b/reglamento.html
@@ -60,11 +60,11 @@
 
     <div class="container">
 
-			<div class="page-header">
+	<div class="page-header">
         <h1>Reglamento</h1>
         <h1><small>Lineamientos internos del laboratorio</small></h1>
-      </div>
-			<embed src="Reglamento2011-2Publicacion.pdf" width=100% height=900px>
+    </div>
+			<embed z-index=-1 src="Reglamento2011-2Publicacion.pdf" width=100% height=900px>
       <hr>
       <footer>
         <p class="pull-right"><a href="#">Regresar</a></p>
