Change PDF location

--- a/reglamento.html
+++ b/reglamento.html
@@ -64,7 +64,7 @@
         <h1>Reglamento</h1>
         <h1><small>Lineamientos internos del laboratorio</small></h1>
     </div>
-			<embed z-index=-1 src="Reglamento2011-2Publicacion.pdf" width=100% height=900px>
+			<embed src="assets/Reglamento2011-2Publicacion.pdf" width=100% height=1000px>
       <hr>
       <footer>
         <p class="pull-right"><a href="#">Regresar</a></p>
