--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 							<a class="span1 visible-desktop" href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a>
 							<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a>						
 						</div>
+						<div>
+							<center><img id="logo" src="img/logo.png"></center>
+						</div>							  
 					</div>				
 				</div>
 				<div class="item">
