Fix index logos

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 					<div class="span2 visible-tablet"><a href=http://www.unam.mx target="_blank"><img src="./img/unam.png"></a></div>
 					<h1 class="span8">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
 					<div class="span2 visible-tablet"><a href=http://www.ingenieria.unam.mx target="_blank"><img src="./img/fi.png"></a></div>
+					<center><img id="logo" src="img/logo.png"></center>
 				</div>
 			</div>
 		</div>
