--- a/infraestructura.html
+++ b/infraestructura.html
@@ -9,11 +9,11 @@
     <link href="./css/infraestructura.css" rel="stylesheet">
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-		<link rel="shortcut icon" href="http://twitter.github.io/bootstrap/assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
+    <link rel="shortcut icon" href="img/logo-favicon.ico">	
+				
   <body>
 
     <!-- NAVBAR -->
