--- a/otros_proyectos.html
+++ b/otros_proyectos.html
@@ -9,12 +9,10 @@
     <link href="./css/otros_proyectos.css" rel="stylesheet">
 
     <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="http://twitter.github.io/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
-		<link rel="shortcut icon" href="http://twitter.github.io/bootstrap/assets/ico/favicon.png">
-		<!--<style type="text/css"></style><style id="holderjs-style" type="text/css">.holderjs-fluid {font-size:16px;font-weight:bold;text-align:center;font-family:sans-serif;margin:0}</style></head> -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
+    <link rel="shortcut icon" href="img/logo-favicon.ico">
 
   <body>
 
