--- a/tesis.html
+++ b/tesis.html
@@ -320,7 +320,22 @@
 					</dl>
 					<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>					
 					<hr class="visible-phone">
-				</div><!--/span4-->				
+				</div><!--/span4-->
+				<!--<div class="span4">
+					<h4>Análisis comparativo de plataformas de desarrollo en sistemas paralelos y distribuidos</h4>
+					<dl>
+						<dt>Autor</dt>
+						<dd>Álvarez Barragán, Carlos Roberto</dd>
+						<dt>Directora de tesis</dt>
+						<dd>Ing. Laura Sandoval Montaño</dd>
+						<dt>Imprenta</dt>
+						<dd>México: 2012, 116 p. : il.</dd>
+						<dt>Número</dt>
+						<dd></dd>
+					</dl>
+					<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>
+					<hr class="visible-phone">
+				</div><!--/span4-->
 			</div><!--/row6-->
 			<hr>
 
