--- a/infraestructura.html
+++ b/infraestructura.html
@@ -106,7 +106,7 @@
 					</ul>
 				</div><!--/span4-->
 			</div><!--/row1-->
-			<div class="row">				
+			<div class="row span3 offset4">				
 					<h3 style="text-align: center">1 GPU NVIDIA Tesla K20C</h3>
 					<br>					
 					<center><img src="img/k20.jpg"/></center>
