--- a/tesis.html
+++ b/tesis.html
@@ -321,7 +321,7 @@
 					<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>					
 					<hr class="visible-phone">
 				</div><!--/span4-->
-				<!--<div class="span4">
+				<div class="span4">
 					<h4>Análisis comparativo de plataformas de desarrollo en sistemas paralelos y distribuidos</h4>
 					<dl>
 						<dt>Autor</dt>
@@ -330,10 +330,10 @@
 						<dd>Ing. Laura Sandoval Montaño</dd>
 						<dt>Imprenta</dt>
 						<dd>México: 2012, 116 p. : il.</dd>
-						<dt>Número</dt>
-						<dd></dd>
+						<!--<dt>Número</dt>
+						<dd></dd>-->
 					</dl>
-					<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>
+					<!--<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>-->
 					<hr class="visible-phone">
 				</div><!--/span4-->
 			</div><!--/row6-->
