Change instructor header

--- a/material.html
+++ b/material.html
@@ -468,7 +468,7 @@
 							
 							<div class="tab-pane fade in active" id="multiprocesamiento">
 								<h3>Multiprocesamiento en lenguaje C</h3>
-								<h4>Instructores</h4>
+								<h4>Instructor</h4>
 								<ul>									
 									<li>Luis Manuel García Hernández</li>
 								</ul>
