--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 						</button>
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
-							<ul class="nav">
+							<a class="brand" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<a class="brand" href=http://www.ingenieria.unam.mx target="_blank" style="padding-left: 200px">Facultad de Ingeniería</a>
+							<a class="brand" href=http://www.unam.mx target="_blank">UNAM</a>
+							<ul class="nav">								
 								<li class="active"><a href="#"><i class="icon-home"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
 								<li><a href="integrantes.html"><i class="icon-user icon-white"></i> Integrantes</a></li>
@@ -69,8 +72,8 @@
 					<div class="container-fluid">
 						<div class="row-fluid">
 							<h1 class="span8 offset2">Laboratorio Intel y Cómputo de Alto Desempeño</h1>
-							<a class="span1 visible-desktop" href=http://www.unam.mx target="_blank"><img style="height: 100px" src="./img/unam_blanco.png"></a>
-							<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px" src="./img/fi_blanco.png"></a>						
+							<a class="span1 visible-desktop" href=http://www.unam.mx target="_blank"><img style="height: 100px; margin-top: 10px" src="./img/unam_blanco.png"></a>
+							<a class="offset10 visible-desktop" href=http://www.ingenieria.unam.mx target="_blank"><img style="height: 100px; margin-top: 10px" src="./img/fi_blanco.png"></a>						
 						</div>
 						<div>
 							<center><img id="logo" src="img/logo.png"></center>
