--- a/infraestructura.html
+++ b/infraestructura.html
@@ -30,6 +30,9 @@
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
+							<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<a class="brand visible-desktop" href=http://www.ingenieria.unam.mx target="_blank" style="padding-left: 200px">Facultad de Ingeniería</a>
+							<a class="brand visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>
 							<ul class="nav">
 								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
