--- a/tesis.html
+++ b/tesis.html
@@ -30,6 +30,9 @@
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
+								<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+								<a class="brand visible-desktop" href=http://www.ingenieria.unam.mx target="_blank" style="padding-left: 200px">Facultad de Ingeniería</a>
+								<a class="brand visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>
 							<ul class="nav">
 								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
@@ -333,8 +336,7 @@
 						<!--<dt>Número</dt>
 						<dd></dd>-->
 					</dl>
-					<!--<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>-->
-					<hr class="visible-phone">
+					<!--<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>-->					
 				</div><!--/span4-->
 			</div><!--/row6-->
 			<hr>
