Fix html header

--- a/tesis.html
+++ b/tesis.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="es"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="es">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Tesis ·  Laboratorio Intel para la Academia · Facultad de Ingeniería · UNAM</title>
+		<title>Tesis ·Laboratorio Intel para la Academia · Facultad de Ingeniería · UNAM</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Página que contiene las tesis realizadas en el Laboratorio de Intel para la Academia">
-
-		<!-- Styles -->
-		<link href="./css/tesis.css" rel="stylesheet">
-
+		<meta name="description" content="Página principal del Laboratorio de Intel para la Academia">
+	
+		<!--Styles -->
+		<link href="./css/index.css" rel="stylesheet">
+	
 		<!-- Fav and touch icons -->
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
-    <link rel="shortcut icon" href="img/logo-favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
+		<link rel="shortcut icon" href="http://lcomp89.fi-b.unam.mx/sitio/img/logo-favicon.ico">
+	</head>
 				
 	<body>
 
