Change navbar links font size

--- a/papime.html
+++ b/papime.html
@@ -8,13 +8,13 @@
 		<meta name="description" content="Página principal del Laboratorio de Intel para la Academia">
 	
 		<!--Styles -->
-		<link href="./css/index.css" rel="stylesheet">
+		<link href="./css/papime.css" rel="stylesheet">
 	
 		<!-- Fav and touch icons -->
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
-		<link rel="shortcut icon" href="img/logo-favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png"/>
+		<link rel="shortcut icon" href="img/favicon.ico"/>
 	</head>
 				
   <body>
@@ -87,10 +87,12 @@
 								<dd>3 periodos</dd>
 							</dl>
 						</div>
+						<hr>
 						<h2 style="cursor: pointer" data-toggle="collapse" data-target="#objetivo-general">Objetivo general</h2>
 						<div id="objetivo-general" class="collapse">
 							<p>Introducir la enseñanza del cómputo paralelo en las carreras que ofrece la Facultad de Ingeniería para solventar la deficiencia actual en la matrícula de profesionales competitivos en desarrollar sistemas de procesamiento paralelo/distribuido en aplicaciones científicas, empresariales y de ingeniería como productos de alta calidad.</p>
 						</div>
+						<hr>
 						<h2 style="cursor: pointer" data-toggle="collapse" data-target="#objetivos-particulares">Objetivos particulares</h2>
 						<div id="objetivos-particulares" class="collapse">
 							<ol>
@@ -101,6 +103,7 @@
 								<li><p>Revisar el material realizado en los cursos-talleres y algunas asignaturas de la carrera de Ingeniería en Computación acordes al tema.</p></li>
 							</ol>
 						</div>
+						<hr>
 						<h2 style="cursor: pointer" data-toggle="collapse" data-target="#sintesis">Síntesis</h2>
 						<div id="sintesis" class="collapse">
 							<p>Los diversos sistemas de aplicación científica y de ingeniería han requerido cada vez más de cómputo intensivo, es decir, de mayor poder de procesamiento; por lo que se requiere de una tecnología de vanguardia para realizar tareas críticas en el menor tiempo posible. Una opción es emplear sistemas de cómputo paralelo.</p>
@@ -110,6 +113,7 @@
 							<p>En este proyecto se realizará un análisis de pertinencia de incluir tópicos de cómputo paralelo en diversas asignaturas de las tres carreras que ofrece la División de Ingeniería Eléctrica de la Facultad de Ingeniería. En primera instancia en las asignaturas de Estructura y Programación de Computadoras, Algoritmos y Estructuras de Datos, Sistemas Operativos, Arquitectura de Computadoras, Computación para Ingenieros, y Programación Avanzada y Métodos Numéricos.</p>
 							<p>Se pretende realizar una práctica o ejercicio dirigido para cada asignatura, así como una guía del profesor donde se especifiquen antecedentes y sugerencias para la realización de la práctica o ejercicio. Además se impartirán cursos, talleres y seminarios dirigidos tanto a profesores como a alumnos, de las carreras citadas, sobre tópicos de este tema. Así mismo se definirán prototipos de algunas aplicaciones científicas o de ingeniería que ocupen procesamiento paralelo/distribuido, como muestra de proyectos que se realizan en la carrera profesional.</p>
 						</div>
+						<hr>
 						<h2 style="cursor: pointer" data-toggle="collapse" data-target="#integrantes">Integrantes</h2>
 						<div id="integrantes" class="collapse">
 							<ul>
