--- a/reglamento.html
+++ b/reglamento.html
@@ -8,13 +8,13 @@
 		<meta name="description" content="Página principal del Laboratorio de Intel para la Academia">
 	
 		<!--Styles -->
-		<link href="./css/index.css" rel="stylesheet">
+		<link href="./css/reglamento.css" rel="stylesheet">
 	
 		<!-- Fav and touch icons -->
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
-		<link rel="shortcut icon" href="img/logo-favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png"/>
+		<link rel="shortcut icon" href="img/favicon.ico"/>
 	</head>
 				
   <body>
