--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<link href="./css/index.css" rel="stylesheet">
 	
 		<!-- Fav and touch icons -->
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png">
-		<link rel="shortcut icon" href="http://lcomp89.fi-b.unam.mx/sitio/img/logo-favicon.ico">
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/logo144.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/logo114.png"/>
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/logo72.png"/>
+		<link rel="shortcut icon" href="img/favicon.ico"/>
 	</head>
 
   <body>
