--- a/tesis.html
+++ b/tesis.html
@@ -19,10 +19,10 @@
 				
 	<body>
 
-		<!-- NAVBAR -->
-		<div class="navbar-wrapper">
-			<div class="navbar navbar-inverse">
-				<div class="navbar-inner navbar-fixed-top">
+	<!-- NAVBAR -->
+    <div class="navbar-wrapper">
+			<div class="navbar navbar-inverse navbar-fixed-top center">
+				<div class="navbar-inner">
 					<!-- Responsive Navbar-->
 					<div class="container">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,38 +31,37 @@
 							<span class="icon-bar"></span>
 						</button>
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
-						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
-								<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-								<a class="brand visible-desktop" href=http://www.ingenieria.unam.mx target="_blank" style="padding-left: 200px">Facultad de Ingeniería</a>
-								<a class="brand visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>
-							<ul class="nav">
-								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
+							<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
+							<a class="visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>-->
+							<ul class="nav">								
+								<li><a href="index.html"><i class="icon-home"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="integrantes.html"><i class="icon-user icon-white"></i> Integrantes</a></li>
+								<li><a href="integrantes.html"><i class="icon-user"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="infraestructura.html"><i class="icon-wrench icon-white"></i> Infraestructura</a></li>
+								<li><a href="infraestructura.html"><i class="icon-wrench"></i> Infraestructura</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="reglamento.html"><i class="icon-ban-circle icon-white"></i> Reglamento</a></li>
+								<li><a href="reglamento.html"><i class="icon-ban-circle"></i> Reglamento</a></li>
 								<li class="divider-vertical"></li>
-								<li class="active"><a href="tesis.html"><i class="icon-book icon-white"></i> Tesis</a></li>
+								<li class="active"><a href="tesis.html"><i class="icon-book"></i> Tesis</a></li>
 								<li class="divider-vertical"></li>
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase icon-white"></i> Proyectos<b class="caret"></b></a>
+									<a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> Proyectos<b class="caret"></b></a>
 									<ul class="dropdown-menu">
-										<li><a style="font-size: 13px" href="papime.html">Proyecto PAPIME</a></li>
+										<li><a href="papime.html" style="font-size: 13px">Proyecto PAPIME</a></li>
 										<li class="divider"></li>
-										<li><a style="font-size: 13px" href="otros_proyectos.html">Otros proyectos</a></li>
+										<li><a href="otros_proyectos.html" style="font-size: 13px">Otros proyectos</a></li>
 									</ul>
 								</li>
 								<li class="divider-vertical"></li>
-								<li><a href="material.html"><i class="icon-folder-open icon-white"></i> Material</a></li>
+								<li><a href="material.html"><i class="icon-folder-open"></i> Material</a></li>
 							</ul>
-						</div>
-					</div>
-				</div><!--/.nav-collapse -->
-			</div><!-- /.navbar-inner -->
-		</div><!-- /.navbar -->
+						</div><!--nav-collapse-->
+					</div><!--container-->
+				</div><!--/.navbar-inner -->
+			</div><!-- /.navbar -->
+    </div><!-- /.navbar-wrapper -->
 
 		<div class="container">
 			<div class="row"><!--row1-->
