--- a/integrantes.html
+++ b/integrantes.html
@@ -21,8 +21,8 @@
 
     <!-- NAVBAR -->
     <div class="navbar-wrapper">
-			<div class="navbar navbar-inverse">
-				<div class="navbar-inner navbar-fixed-top">
+			<div class="navbar navbar-inverse navbar-fixed-top center">
+				<div class="navbar-inner">
 					<!-- Responsive Navbar-->
 					<div class="container">
 						<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -31,43 +31,42 @@
 							<span class="icon-bar"></span>
 						</button>
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
-						<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
 						<div class="nav-collapse collapse">
 							<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<a class="brand visible-desktop" href=http://www.ingenieria.unam.mx target="_blank" style="padding-left: 200px">Facultad de Ingeniería</a>
-							<a class="brand visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>
+							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
+							<a class="visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>-->
 							<ul class="nav">								
-								<li><a href="index.html"><i class="icon-home icon-white"></i> Página de inicio</a></li>
+								<li><a href="index.html"><i class="icon-home"></i> Página de inicio</a></li>
 								<li class="divider-vertical"></li>
-								<li class="active"><a href="#"><i class="icon-user icon-white"></i> Integrantes</a></li>
+								<li class="active"><a href="#"><i class="icon-user"></i> Integrantes</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="infraestructura.html"><i class="icon-wrench icon-white"></i> Infraestructura</a></li>
+								<li><a href="infraestructura.html"><i class="icon-wrench"></i> Infraestructura</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="reglamento.html"><i class="icon-ban-circle icon-white"></i> Reglamento</a></li>
+								<li><a href="reglamento.html"><i class="icon-ban-circle"></i> Reglamento</a></li>
 								<li class="divider-vertical"></li>
-								<li><a href="tesis.html"><i class="icon-book icon-white"></i> Tesis</a></li>
+								<li><a href="tesis.html"><i class="icon-book"></i> Tesis</a></li>
 								<li class="divider-vertical"></li>
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase icon-white"></i> Proyectos<b class="caret"></b></a>
+									<a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-briefcase"></i> Proyectos<b class="caret"></b></a>
 									<ul class="dropdown-menu">
-										<li><a style="font-size: 13px" href="papime.html">Proyecto PAPIME</a></li>
+										<li><a href="papime.html" style="font-size: 13px">Proyecto PAPIME</a></li>
 										<li class="divider"></li>
-										<li><a style="font-size: 13px" href="otros_proyectos.html">Otros proyectos</a></li>
+										<li><a href="otros_proyectos.html" style="font-size: 13px">Otros proyectos</a></li>
 									</ul>
 								</li>
 								<li class="divider-vertical"></li>
-								<li><a href="material.html"><i class="icon-folder-open icon-white"></i> Material</a></li>
+								<li><a href="material.html"><i class="icon-folder-open"></i> Material</a></li>
 							</ul>
-						</div>
-					</div>
-				</div><!--/.nav-collapse -->
-			</div><!-- /.navbar-inner -->
-    </div><!-- /.navbar -->
+						</div><!--nav-collapse-->
+					</div><!--container-->
+				</div><!--/.navbar-inner -->
+			</div><!-- /.navbar -->
+    </div><!-- /.navbar-wrapper -->
 
     <div class="container">
       <div class="page-header">
         <h1>Integrantes</h1>
-        <h1><small>Académicos y alumnos que colaboran con el laboratorio</small></h1>
+        <h1 id="laura"><small>Académicos y alumnos que colaboran con el laboratorio</small></h1>
       </div>
       <div class="row"><!--row 1-->
         <div class="span3" id="navbar">
@@ -86,148 +85,147 @@
 
         <hr class="visible-phone">
         <div class="span9">
-					<section id="laura">
-						<br><br>
-            <h1>Ing. Laura Sandoval Montaño</h1>
-            <h1><small>Responsable del laboratorio</small></h1>
-						<div class="row-fluid"><!--row 2-->
-							<div class="span8">
-								<h3>Formación académica</h3>
-								<p>Realizó estudios de maestría y doctorado en Ciencias e Ingeniería de la Computación en la UNAM. Coordinadora del Área de Conocimiento de Ingeniería de Software y responsable del Laboratorio de Telemática, ambos en el Departamento de Ingeniería en Computación de la Facultad de Ingeniería de la UNAM.</p>
-							</div><!--/span8-->
-							<div class="span4">
-								<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
-							</div><!--/span4-->
-						</div><!--/row 2-->
-						<div class="row-fluid">
-							<div class="span12">
-								<h3>Formación profesional</h3>
-								<p>Es profesora de carrera de tiempo completo en dicha institución; ha impartido clase en el área de Ingeniería de Software desde hace 20 años. Ha dirigido más de 30 trabajos de tesis de licenciatura. Trabaja en la línea de investigación de Sistemas Operativos, Compiladores y Cómputo de Alto Desempeño.</p>
-							</div>
-						</div>
-						<div class="visible-phone">
-							<p style="text-align: right"><a href="#">Regresar</a></p>
-						</div>
-						<br><br>
-						<hr>
-					</section>
+			<section>								
+				<h1>Ing. Laura Sandoval Montaño</h1>
+				<h1><small>Responsable del laboratorio</small></h1>
+				<div class="row-fluid"><!--row 2-->
+					<div class="span8">
+						<h3>Formación académica</h3>
+						<p>Realizó estudios de maestría y doctorado en Ciencias e Ingeniería de la Computación en la UNAM. Coordinadora del Área de Conocimiento de Ingeniería de Software y responsable del Laboratorio de Telemática, ambos en el Departamento de Ingeniería en Computación de la Facultad de Ingeniería de la UNAM.</p>
+					</div><!--/span8-->
+					<div class="span4">
+						<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
+					</div><!--/span4-->
+				</div><!--/row 2-->
+				<div class="row-fluid">
+					<div class="span12">
+						<h3>Formación profesional</h3>
+						<p>Es profesora de carrera de tiempo completo en dicha institución; ha impartido clase en el área de Ingeniería de Software desde hace 20 años. Ha dirigido más de 30 trabajos de tesis de licenciatura. Trabaja en la línea de investigación de Sistemas Operativos, Compiladores y Cómputo de Alto Desempeño.</p>
+					</div>
+				</div>
+				<div class="visible-phone">
+					<p style="text-align: right"><a href="#">Regresar</a></p>
+				</div>
+				<br>
+			</section>
 
-					<section id="karen">
-						<br><br>
-            <h1 id="karen2">M.I. Elba Karen Sáenz García</h1>
-            <h1><small>Administradora del laboratorio</small></h1>
-            <div class="row-fluid"><!--row 2-->
-              <div class="span8">
-                <h3>Formación académica</h3>
-                <p>Ingeniera en computación y maestra en Ingeniería Eléctrica en el área de Telecomunicaciones por la Universidad Nacional Autónoma de México, colabora en el Laboratorio de Intel de la Facultad de Ingeniería. Profesora en las Divisiones de Ingeniería Eléctrica y Ciencias Básicas en la citada institución.</p>
-              </div><!--/span8-->
-              <div class="span4">
-                <p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
-              </div><!--/span4-->
-            </div><!--/row 2-->
-            <div class="row-fluid">
-              <div class="span12">
-                <h3>Investigación</h3>
-                <p>Las líneas de investigación que sigue actualmente son cómputo de alto desempeño (paralelo-distribuido), procesadores de red para el diseño de sistemas de red.</p>
-              </div>
-            </div>
-            <div class="visible-phone">
-							<p style="text-align: right"><a href="#">Regresar</a></p>
-            </div>
-						<br><br>
-            <hr>
-					</section>
+			<section id="karen">
+				<br><hr>
+				<br><br>
+				<h1 id="karen2">M.I. Elba Karen Sáenz García</h1>
+				<h1><small>Administradora del laboratorio</small></h1>
+				<div class="row-fluid"><!--row 2-->
+				  <div class="span8">
+					<h3>Formación académica</h3>
+					<p>Ingeniera en computación y maestra en Ingeniería Eléctrica en el área de Telecomunicaciones por la Universidad Nacional Autónoma de México, colabora en el Laboratorio de Intel de la Facultad de Ingeniería. Profesora en las Divisiones de Ingeniería Eléctrica y Ciencias Básicas en la citada institución.</p>
+				  </div><!--/span8-->
+				  <div class="span4">
+					<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
+				  </div><!--/span4-->
+				</div><!--/row 2-->
+				<div class="row-fluid">
+				  <div class="span12">
+					<h3>Investigación</h3>
+					<p>Las líneas de investigación que sigue actualmente son cómputo de alto desempeño (paralelo-distribuido), procesadores de red para el diseño de sistemas de red.</p>
+				  </div>
+				</div>
+				<div class="visible-phone">
+					<p style="text-align: right"><a href="#">Regresar</a></p>
+				</div>
+				<br>
+			</section>
+					
+			<section id="oscar">
+				<br><hr>
+				<br><br>
+				<h1>M.I. Oscar René Valdez Casillas</h1>
+				<h1><small>Asesor</small></h1>
+				<div class="row-fluid"><!--row 2-->
+					<div class="span8">
+						<h3>Formación académica</h3>
+						<p>Estudió la carrera de Ingeniería en Computación y es maestro es ingeniería Eléctrica en el área de telecomunicaciones. Realiza colaboraciones con el laboratorio de Intel y es profesor desde hace 6 años en la institución.</p>
+					</div><!--/span8-->
+					<div class="span4">
+						<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
+					</div><!--/span4-->
+				</div><!--/row 2-->
+				<div class="row-fluid">
+					<div class="span12">
+						<h3>Investigación</h3>
+						<p>Las líneas de investigación que sigue actualmente son cómputo de alto desempeño y redes de datos (procesadores de red para el diseño de sistemas de red).</p>
+					</div>
+				</div>
+				<div class="visible-phone">
+					<p style="text-align: right"><a href="#">Regresar</a></p>
+				</div>
+				<br>
+			</section>
 
-					<section id="oscar">
-						<br><br>
-            <h1>M.I. Oscar René Valdez Casillas</h1>
-            <h1><small>Asesor</small></h1>
-						<div class="row-fluid"><!--row 2-->
-							<div class="span8">
-								<h3>Formación académica</h3>
-								<p>Estudió la carrera de Ingeniería en Computación y es maestro es ingeniería Eléctrica en el área de telecomunicaciones. Realiza colaboraciones con el laboratorio de Intel y es profesor desde hace 6 años en la institución.</p>
-              </div><!--/span8-->
-							<div class="span4">
-								<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
-							</div><!--/span4-->
-						</div><!--/row 2-->
-						<div class="row-fluid">
-							<div class="span12">
-								<h3>Investigación</h3>
-								<p>Las líneas de investigación que sigue actualmente son cómputo de alto desempeño y redes de datos (procesadores de red para el diseño de sistemas de red).</p>
-							</div>
-						</div>
-						<div class="visible-phone">
-							<p style="text-align: right"><a href="#">Regresar</a></p>
-						</div>
-						<br><br>
-						<hr>
-					</section>
+			<section id="andres">
+				<br><hr>
+				<br><br>
+				<h1>Ing. Andrés Mondragón Contreras</h1>
+				<h1><small>Asesor</small></h1>
+				<div class="row-fluid"><!--row 2-->
+					<div class="span8">
+						<h3>Formación académica</h3>
+						<p>Ingeniero en Computación por la Universidad Nacional Autónoma de México.</p>
+					</div><!--/span8-->
+					<div class="span4">
+						<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
+					</div><!--/span4-->
+				</div><!--/row 2-->
+				<div class="row-fluid">
+					<div class="span12">
+						<h3>Formación profesional</h3>
+						<p>Ha impartido cursos relacionados con el área de cómputo paralelo.</p>
+					</div>
+				</div>
+				<div class="visible-phone">
+					<p style="text-align: right"><a href="#">Regresar</a></p>
+				</div>
+				<br>
+			</section>
 
-					<section id="andres">
-						<br><br>
-            <h1>Ing. Andrés Mondragón Contreras</h1>
-            <h1><small>Asesor</small></h1>
-            <div class="row-fluid"><!--row 2-->
-							<div class="span8">
-								<h3>Formación académica</h3>
-								<p>Ingeniero en Computación por la Universidad Nacional Autónoma de México.</p>
-							</div><!--/span8-->
-							<div class="span4">
-								<p class="text-center"><img src="http://placehold.it/200x150" class="img-polaroid"/></p>
-							</div><!--/span4-->
-						</div><!--/row 2-->
-						<div class="row-fluid">
-							<div class="span12">
-								<h3>Formación profesional</h3>
-								<p>Ha impartido cursos relacionados con el área de cómputo paralelo.</p>
-							</div>
-						</div>
-						<div class="visible-phone">
-							<p style="text-align: right"><a href="#">Regresar</a></p>
-						</div>
-						<br><br>
-            <hr>
-					</section>
+			<section id="servicio">
+				<br><hr>
+				<br><br>						
+				<h1 >Servicio Social</h1>
+				<h4>El laboratorio cuenta con un plan de servicio social.</h4>
+				<p>Los requisitos para poder realizarlo son:</p>
+				<ul>
+					<li>Estudiar alguna de las siguientes ingenierías:</li>
+					<ul>
+						<li>Ingeniería en computación</li>
+						<li>Ingeniería eléctrica</li>
+						<li>Ingeniería en telecomunicaciones</li>
+					</ul>
+					<li>Encontrarse en los últimos semestres de dichas carreras</li>
+				</ul>
+				<h4>Alumnos que se encuentran realizando el servicio social en el laboratorio:</h4>
+				<ul>
+					<li>Ariel Ulloa Trejo</li>
+					<li>Carlos Aldair Román Balbuena</li>
+					<li>Luis Fernando Pérez Franco</li>
+				</ul>
+				<br>
+			</section>
 
-					<section id="servicio">
-						<br><br>
-						<h1 >Servicio Social</h1>
-						<h4>El laboratorio cuenta con un plan de servicio social.</h4>
-						<p>Los requisitos para poder realizarlo son:</p>
-						<ul>
-							<li>Estudiar alguna de las siguientes ingenierías:</li>
-							<ul>
-								<li>Ingeniería en computación</li>
-								<li>Ingeniería eléctrica</li>
-								<li>Ingeniería en telecomunicaciones</li>
-							</ul>
-							<li>Encontrarse en los últimos semestres de dichas carreras</li>
-						</ul>
-						<h4>Alumnos que se encuentran realizando el servicio social en el laboratorio:</h4>
-						<ul>
-							<li>Ariel Ulloa Trejo</li>
-							<li>Carlos Aldair Román Balbuena</li>
-							<li>Luis Fernando Pérez Franco</li>
-						</ul>
-						<hr>
-					</section>
-
-					<section id="tesistas">
-						<br><br>
-						<h1 >Tesistas</h1>
-						<h3>Análisis e interpretación de patrones musicales</h3>
-						<dl>
-							<dt>Autor:</dt>
-							<dd>Néstor Abdy García Fragoso</dd>
-							<dt>Director de tesis:</dt>
-							<dd>Ing. Manuel Castañeda Castañeda</dd>
-						</dl>						
-						<div class="visible-phone">
-							<p style="text-align: right"><a href="#">Regresar</a></p>
-						</div>						
-						<br><br>
-					</section>
+			<section id="tesistas">
+				<br><hr>
+				<br><br>
+				<h1 >Tesistas</h1>
+				<h3>Título: Análisis e interpretación de patrones musicales</h3>
+				<dl>
+					<dt>Autor:</dt>
+					<dd>Néstor Abdy García Fragoso</dd>
+					<dt>Director de tesis:</dt>
+					<dd>Ing. Manuel Castañeda Castañeda</dd>
+				</dl>						
+				<div class="visible-phone">
+					<p style="text-align: right"><a href="#">Regresar</a></p>
+				</div>				
+			</section>
 
         </div><!--/span9-->
       </div><!--/row 1-->
