Update responsive navbar

--- a/material.html
+++ b/material.html
@@ -64,7 +64,7 @@
     </div><!-- /.navbar-wrapper -->
 
     <div class="container">		
-			<h1 style="font-size: 58px; margin-top: 120px;">Material didáctico</h1>
+			<h1 id="title">Material didáctico</h1>
 			<h1><small>Prácticas y material didáctico de cursos y seminarios impartidos en el laboratorio</small></h1>				
 					
     <div class="row-fluid">		
