--- a/integrantes.html
+++ b/integrantes.html
@@ -32,9 +32,8 @@
 						</button>
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
-							<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
-							<a class="visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>-->
+							<a id="titulo" class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<div id="fi-unam"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
 							<ul class="nav">								
 								<li><a href="index.html"><i class="icon-home"></i> Página de inicio</a></li>								
 								<li class="active"><a href="#"><i class="icon-user"></i> Integrantes</a></li>								
@@ -64,7 +63,7 @@
       </div>
       <div class="row"><!--row 1-->
         <div class="span3" id="navbar">
-					<ul class="nav nav-list affix well" data-spy="affix" data-offset-top="190">
+					<ul class="nav nav-list affix well" data-spy="affix" data-offset-top="165">
 						<li class="nav-header">Asesores</li>
 						<li class="active"><a href="#laura">Ing. Laura Sandoval Montaño</a></li>
 						<li><a href="#karen">M.I. Elba Karen Sáenz García</a></li>
