--- a/tesis.html
+++ b/tesis.html
@@ -32,9 +32,8 @@
 						</button>
 						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
-							<a class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
-							<a class="visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>-->
+							<a id="titulo" class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<div id="fi-unam"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
 							<ul class="nav">								
 								<li><a href="index.html"><i class="icon-home"></i> Página de inicio</a></li>							
 								<li><a href="integrantes.html"><i class="icon-user"></i> Integrantes</a></li>						
@@ -332,7 +331,7 @@
 						<!--<dt>Número</dt>
 						<dd></dd>-->
 					</dl>
-					<!--<p><a class="btn" href="http://132.248.9.195/ptb2011/marzo/0667913/Index.html" target="_blank">Tesis digital</a></p>-->					
+					<p><a class="btn" href="http://132.248.9.195/ptd2012/octubre/305580364/Index.html" target="_blank">Tesis digital</a></p>
 				</div><!--/span4-->
 			</div><!--/row6-->
 			<hr>
