--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 							<span class="icon-bar"></span>
 						</button>
 						<h4 class="brand visible-tablet" id="tablet-brand">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
-						<div class="nav-collapse collapse">
-							<a class="brand visible-desktop" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
-							<a class="visible-desktop" href=http://www.unam.mx target="_blank">UNAM</a>-->
+						<div class="nav-collapse collapse">							
+							<a id="titulo" class="brand visible-desktop" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
+							<div id="fi-unam"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
 							<ul class="nav">								
 								<li class="active"><a href="#"><i class="icon-home"></i> Página de inicio</a></li>								
 								<li><a href="integrantes.html"><i class="icon-user"></i> Integrantes</a></li>								
