Fix navbar for tablets

--- a/tesis.html
+++ b/tesis.html
@@ -30,10 +30,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
+						<h4 class="brand visible-tablet" id="tablet-brand">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
 							<a id="titulo" class="brand visible-desktop" href="index.html">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<div id="fi-unam"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
+							<div id="fi-unam" class="visible-desktop"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
 							<ul class="nav">								
 								<li><a href="index.html"><i class="icon-home"></i> Página de inicio</a></li>							
 								<li><a href="integrantes.html"><i class="icon-user"></i> Integrantes</a></li>						
