--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<h4 class="brand visible-tablet" id="tablet-brand">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">							
 							<a id="titulo" class="brand visible-desktop" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
-							<div id="fi-unam"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
+							<div id="fi-unam" class="visible-desktop"><a href="http://www.ingenieria.unam.mx" target="_blank" style="text-decoration: none">Facultad de Ingeniería</a>, <a href="http://unam.mx" target="_blank">UNAM</a></div>
 							<ul class="nav">								
 								<li class="active"><a href="#"><i class="icon-home"></i> Página de inicio</a></li>								
 								<li><a href="integrantes.html"><i class="icon-user"></i> Integrantes</a></li>								
