Add carousel image

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="item">
 					<div class="container">
 						<div class="row">
-							<h1>Texto va aquí</h1>
+							<center><img id="carousel-img1" src="img/carousel-img.png"/></center>
 						</div>
 					</div>
 				</div>
